exports[`auth/Login should draw error statuses 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      }
    }>
    <Image
      source={1}
      style={
        Object {
          "height": 24,
          "position": "absolute",
          "width": 24
        }
      } />
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      Log in
    </Text>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24
          },
          false
        ]
      }>
      <Text
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center"
            },
            Array [
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 14,
                "fontWeight": "bold",
                "marginBottom": 9,
                "textAlign": "left"
              },
              undefined
            ]
          ]
        }>
        Email
      </Text>
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        keyboardType="email-address"
        label="Email"
        onBlur={[Function onBlur]}
        onChangeText={[Function onChangeText]}
        onFocus={[Function onFocus]}
        placeholderTextColor="#c0cbcc"
        style={
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          }
        }
        underlineColorAndroid="transparent"
        value={undefined} />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24
          },
          false
        ]
      }>
      <Text
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center"
            },
            Array [
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 14,
                "fontWeight": "bold",
                "marginBottom": 9,
                "textAlign": "left"
              },
              undefined
            ]
          ]
        }>
        Password
      </Text>
      <TextInput
        label="Password"
        onBlur={[Function onBlur]}
        onChangeText={[Function onChangeText]}
        onFocus={[Function onFocus]}
        placeholderTextColor="#c0cbcc"
        secureTextEntry={true}
        style={
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          }
        }
        underlineColorAndroid="transparent"
        value={undefined} />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        undefined
      ]
    }>
    Sorry, we seem to have an issue on our side. We've been notified of the problem and will look into it as soon as possible.
  </Text>
  <Text
    onPress={[Function noop]}
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        Array [
          Object {
            "color": "#f77040",
            "fontSize": 14
          },
          undefined
        ]
      ]
    }>
    Forgot your password?
  </Text>
</View>
`;

exports[`auth/Login should draw not found statuses 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      }
    }>
    <Image
      source={1}
      style={
        Object {
          "height": 24,
          "position": "absolute",
          "width": 24
        }
      } />
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      Log in
    </Text>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24
          },
          false
        ]
      }>
      <Text
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center"
            },
            Array [
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 14,
                "fontWeight": "bold",
                "marginBottom": 9,
                "textAlign": "left"
              },
              undefined
            ]
          ]
        }>
        Email
      </Text>
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        keyboardType="email-address"
        label="Email"
        onBlur={[Function onBlur]}
        onChangeText={[Function onChangeText]}
        onFocus={[Function onFocus]}
        placeholderTextColor="#c0cbcc"
        style={
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          }
        }
        underlineColorAndroid="transparent"
        value={undefined} />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24
          },
          false
        ]
      }>
      <Text
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center"
            },
            Array [
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 14,
                "fontWeight": "bold",
                "marginBottom": 9,
                "textAlign": "left"
              },
              undefined
            ]
          ]
        }>
        Password
      </Text>
      <TextInput
        label="Password"
        onBlur={[Function onBlur]}
        onChangeText={[Function onChangeText]}
        onFocus={[Function onFocus]}
        placeholderTextColor="#c0cbcc"
        secureTextEntry={true}
        style={
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          }
        }
        underlineColorAndroid="transparent"
        value={undefined} />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300
          },
          undefined
        ]
      }>
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        undefined
      ]
    }>
    Sorry, we couldn't find an account with that username and password combination.
  </Text>
  <Text
    onPress={[Function noop]}
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        Array [
          Object {
            "color": "#f77040",
            "fontSize": 14
          },
          undefined
        ]
      ]
    }>
    Forgot your password?
  </Text>
</View>
`;
